Initial support for modules as plugins
- plugin loader
- mod_acceslog initial skel

--- a/Makefile.am
+++ b/Makefile.am
@@ -117,7 +117,17 @@ if LIVE_STREAMING
 dist_feng_SOURCES += src/media/demuxer/demuxer_sd.c
 endif
 
-INCLUDES = -I. -I$(srcdir)/src
+##if FENG_PLUGINS
+dist_feng_SOURCES += modules/plugin.c \
+		     modules/plugin.h
+
+pkglib_LTLIBRARIES = modules/mod_accesslog.la
+modules_mod_accesslog_la_LDFLAGS = -module -disable-static -avoid-version -no-undefined
+
+feng_CPPFLAGS = -DLIBDIR="\"$(pkglibdir)\""
+##endif
+
+INCLUDES = -I. -I$(srcdir)/src -I$(srcdir)/modules
 
 if HAVE_RAGEL
 include $(top_srcdir)/ragel.make
