Fix out-of-tree builds.

--- a/Makefile.am
+++ b/Makefile.am
@@ -150,7 +150,7 @@ BUILT_SOURCES += tests/gtestmain.c
 
 tests/gtestmain.c: $(tests_testsuite_SOURCES) Makefile.am
 	@$(mkdir_p) $(dir $@)
-	$(AM_V_GEN)$(EXUBERANT_CTAGS) -f - --file-scope=no $(tests_testsuite_SOURCES) | \
+	$(AM_V_GEN)$(EXUBERANT_CTAGS) -f - --file-scope=no $(filter %.c,$^) | \
 		sort -k 2 | $(EGREP) '^test_' | \
 		$(GAWK) -f $(srcdir)/tests/genmain.awk \
 		> $@
