Improve support for GIT-generation of ChangeLog.
When GIT cannot be found, don't bail out at either configure nor build
time; warn the user, and ignore the failure; if the ChangeLog is generated
empty, we can still use feng, but we cannot make a distribution.

Thus, add a distcheck-hook rule that ensures that the ChangeLog is not
empty.

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,11 +19,14 @@ dist_doc_DATA = AUTHORS ChangeLog NEWS README RELEASE TODO
 
 if CHANGELOG_REGEN
 ChangeLog:
-	$(AM_V_GEN)GIT_DIR="${srcdir}/.git" git log --pretty > $@
+	-$(AM_V_GEN)GIT_DIR="${srcdir}/.git" git log --pretty > $@
 
 # Always regenerate!
 .PHONY: ChangeLog
 endif
+
+distcheck-hook:
+	@test -s "${srcdir}"/ChangeLog || { echo "distcheck: empty ChangeLog found; make sure you have GIT installed" >/dev/stderr; false; }
 
 bin_PROGRAMS = feng
 
