Add an alternative implementation for the code-to-string functions.
The functions returning the string-based value for header names and
response descriptions used to only use big constant tables for lookup;
while this is okay for probably most server systems (they are served from
the mmapped file), embedded systems usually have more executable memory
area than read-only memory area.

So add an alternative build-time selection to make use of switch-based
conversion, which uses jump-tables for returning the correct string,
reducing the rodata overhead.

--- a/configure.ac
+++ b/configure.ac
@@ -50,6 +50,11 @@ AC_ARG_ENABLE(metadata,
     AS_HELP_STRING([--enable-metadata], [enable metadata support [[default=no]]]),,
     enable_metadata="no")
 
+AC_ARG_ENABLE([tables],
+    AS_HELP_STRING([--disable-tables], [disable big build-time tables (for embedded)]))
+
+AM_CONDITIONAL([AVOID_TABLES], [test "x$enable_tables" = "xno"])
+
 dnl Checks used by feng itself
 AC_CHECK_HEADERS_ONCE([syslog.h])
 
