--- a/etc/feng-uninstalled.conf.in
+++ b/etc/feng-uninstalled.conf.in
@@ -3,11 +3,12 @@ var.basedir  = "@abs_top_builddir@"
 var.logdir   = "@abs_top_builddir@"
 var.statedir = "@abs_top_builddir@"
 
-# Non functional right now
-#server.modules = (
+server.modulesdir = "@abs_top_builddir@/modules/.libs"
+
+server.modules = (
 #    "mod_access",
-#    "mod_accesslog"
-#)
+    "mod_accesslog"
+)
 
 # bind to port (defaults to @fenice_rtsp_port@)
 server.port         = 8554
