--- a/etc/feng.conf.in
+++ b/etc/feng.conf.in
@@ -3,14 +3,14 @@ var.basedir  = "@feng_basedir@"
 var.logdir   = "@feng_logdir@"
 var.statedir = "@feng_statedir@"
 
-# bind to port (defaults to @fenice_rtsp_port@)
+# bind to port (defaults to @feng_rtsp_port@)
 # server.port         = 8554
 
 # bind to name (defaults to all interfaces)
 # server.bind         = "live.host.tld"
 
 # use sctp instead of tcp (you may use the same port)
-# $SERVER["socket"] == "localhost:@fenice_rtsp_port@" {
+# $SERVER["socket"] == "localhost:@feng_rtsp_port@" {
 #   sctp.protocol       = "enable"
 #   sctp.max_streams    = 16
 # }
@@ -20,7 +20,7 @@ server.groupname     = "feng"
 # Set log verbosity (defaults to Warnings):
 # 0 Warnings 1 Info 2 Client side 3 Debug 4 Verbose
 server.loglevel      = 1
-server.max-connections = @fenice_max_session@
+server.max-connections = @feng_max_session@
 server.document-root = var.basedir + "/avroot"
 server.errorlog      = var.logdir  + "/error.log"
 
