--- a/etc/feng-uninstalled.conf.in
+++ b/etc/feng-uninstalled.conf.in
@@ -3,7 +3,7 @@ var.basedir  = "@abs_top_builddir@"
 var.logdir   = "@abs_top_builddir@"
 var.statedir = "@abs_top_builddir@"
 
-# bind to port (defaults to @fenice_rtsp_port@)
+# bind to port (defaults to @feng_rtsp_port@)
 server.port         = 8554
 
 # bind to name (defaults to all interfaces)
@@ -17,7 +17,7 @@ server.port         = 8554
 
 server.username      = "feng"
 server.groupname     = "feng"
-server.max-connections = @fenice_max_session@
+server.max-connections = @feng_max_session@
 server.loglevel      = 1
 server.document-root = "@abs_top_srcdir@/avroot"
 server.errorlog      = var.logdir  + "/error.log"
