Refactor almost entirely the RTP/RTCP handling in feng.
Rather than branching on the (theoretically abstracted) sockets provided by
netembryo, provide multiple callbacks, and save those in the objects used.

This is not yet complete, but it simplifies a lot the handling of RTP
transports, and can be polished to extend to even more possible transport
protocols.

--- a/Makefile.am
+++ b/Makefile.am
@@ -95,6 +95,7 @@ dist_feng_SOURCES = $(RAGEL_SOURCES) \
 	src/network/rtsp_state_machine.c \
 	src/network/rtsp_utils.c \
 	src/network/http_tunnelling.c \
+	src/network/rtsp_interleaved.c \
 	\
 	src/media/demuxer.c \
 	src/media/demuxer.h \
@@ -127,6 +128,10 @@ endif
 
 if HAVE_JSON
 dist_feng_SOURCES += src/statistics.c
+endif
+
+if ENABLE_SCTP
+dist_feng_SOURCES += src/network/rtsp_sctp.c
 endif
 
 if AVOID_TABLES
@@ -173,7 +178,7 @@ check_PROGRAMS = $(TESTS)
 BUILT_SOURCES += tests/gtestmain.c \
 	tests/rfc822proto/rfc822proto-test.c
 
-tests/gtestmain.c: $(tests_testsuite_SOURCES) Makefile.am
+tests/gtestmain.c: $(tests_testsuite_SOURCES) $(srcdir)/tests/genmain.awk Makefile.am
 	@$(mkdir_p) $(dir $@)
 	$(AM_V_GEN)$(EXUBERANT_CTAGS) -f - --file-scope=no $(filter %.c,$^) | \
 		sort -k 2 | $(EGREP) '^test_' | \
@@ -185,6 +190,7 @@ tests_testsuite_SOURCES = \
 	src/bufferqueue.c \
 	src/network/ragel_request_line.c \
 	src/network/ragel_headers.c \
+	src/network/ragel_transport.c \
 	tests/bufferqueue/test-1.c \
 	tests/bufferqueue/test-2.c \
 	tests/bufferqueue/test-3.c \
@@ -192,7 +198,8 @@ tests_testsuite_SOURCES = \
 	tests/bufferqueue/test-5.c \
 	tests/rfc822proto/rfc822proto-test.c \
 	tests/rfc822proto/request_line.c \
-	tests/rfc822proto/headers.c
+	tests/rfc822proto/headers.c \
+	tests/rfc822proto/transport_header.c
 
 # tests_testsuite_CFLAGS = -DFENG_BQ_DEBUG
 
