Rewrite main binding support to remove the need for neb_sock_bind.
Not only we drop the usage of Sock structure altogether with this, but we
can now handle both IPv6 and IPv4 binding at once, SCTP binding, and
multi-homed hostnames.

This does not yet support multi-homed SCTP with bindx though.

--- a/etc/feng-uninstalled.conf.in
+++ b/etc/feng-uninstalled.conf.in
@@ -9,6 +9,8 @@ server.port         = 8554
 # bind to name (defaults to all interfaces)
 # server.bind         = "live.host.tld"
 
+server.use_ipv6 = 1
+
 # use sctp instead of tcp
 @ENABLE_SCTP@$SERVER["socket"] == "localhost:8554" {
 @ENABLE_SCTP@   sctp.protocol       = "enable"
