Handle both the GNU-specific and the XSI-standard strerror_r function.
Thankfully, autoconf already provides a macro to test for that, we just
need to change the code to suit both options.

In the case of the GNU-specific functions, a static constant integer will
be used for the error status; this _shouldn't_ cause any overhead as the
compiler can optimise the else branch away by itself.

--- a/configure.ac
+++ b/configure.ac
@@ -52,6 +52,8 @@ dnl Checks used by feng itself
 AC_CHECK_HEADERS_ONCE([syslog.h])
 AC_CHECK_FUNCS_ONCE([inet_ntop])
 
+AC_FUNC_STRERROR_R
+
 AC_SEARCH_LIBS([clock_gettime], [rt],
   [AC_DEFINE([HAVE_CLOCK_GETTIME], [1], [Define this if you have clock_gettime])],
   [AC_MSG_WARN([POSIX realtime features not available])])
