Make sure to enable live streaming and stats (json) for doxygen build.

--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -192,7 +192,7 @@ EXPAND_ONLY_PREDEF     = NO
 SEARCH_INCLUDES        = YES
 INCLUDE_PATH           =
 INCLUDE_FILE_PATTERNS  =
-PREDEFINED             = DOXYGEN CLEANUP_DESTRUCTOR=
+PREDEFINED             = DOXYGEN CLEANUP_DESTRUCTOR= LIVE_STREAMING=1 HAVE_JSON=1
 EXPAND_AS_DEFINED      = CLEANUP_DESTRUCTOR=
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
