Fix IPv6 enabling.

--- a/etc/feng.conf.in
+++ b/etc/feng.conf.in
@@ -9,13 +9,13 @@ var.statedir = "@feng_statedir@"
 # bind to name (defaults to all interfaces)
 # server.bind         = "live.host.tld"
 
-@ENABLE_IPV6@server.use-ipv6 = 1
+@ENABLE_IPV6@server.use-ipv6 = "enable"
 
 # use sctp instead of tcp (you may use the same port)
 @ENABLE_SCTP@$SERVER["socket"] == ":@feng_rtsp_port@" {
 @ENABLE_SCTP@   sctp.protocol       = "enable"
 @ENABLE_SCTP@   sctp.max_streams    = 16
-@ENABLE_SCTP@@ENABLE_IPV6@   server.use-ipv6 = 1
+@ENABLE_SCTP@@ENABLE_IPV6@   server.use-ipv6 = "enable"
 @ENABLE_SCTP@}
 
 server.username      = "feng"
