Bail out during ./configure if TLS is missing.

--- a/configure.ac
+++ b/configure.ac
@@ -60,6 +60,9 @@ AC_SEARCH_LIBS([clock_gettime], [rt],
 
 CC_ATTRIBUTE_DESTRUCTOR
 
+AX_TLS([],
+  [AC_MSG_ERROR([Unable to find TLS class])])
+
 AH_BOTTOM([#if !defined(NDEBUG) && defined(SUPPORT_ATTRIBUTE_DESTRUCTOR)
 	   # define CLEANUP_DESTRUCTOR __attribute__((__destructor__))
 	   #endif
