Implement a new config file parser and format.
Change the configuration syntax from a lighttpd-inspired configuration
file to a bind-inspired configuration file that seems to suit us much
better. Implement a basic options, and multiple socket and vhost sections.

To parse this file replace the old lemon-generated and hand-tweaked parser
with a flex/yacc-based reactive parser, that should be both faster and much
lighter in the amount of code produced. Since flex and yacc are repetitive
languages, use a new XML-based goldberg machine to produce the actual
source files.

[TODO: replace this goldberg machine with Perl-based generation.]

The new code parsers and makes available directly both the socket and the
vhost configuration, even though we currently make use only of the first
vhost defined (the default vhost).

Implement a --lint option that we can use to check the validity of the
configuration file without starting the server, binding ports or
anything. On the other hand, the new parser makes it difficult/impossible
to properly handle the --syslog option, so it has been dropped entirely.

Please note, currently the optional cleanup functions aren't completed, and
as such valgrind will report a number of still-reachable memory areas, all
over the parser and initialisation functions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,7 +39,12 @@ RAGEL_SOURCES = \
 
 BUILT_SOURCES = $(RAGEL_SOURCES) \
 	src/network/rfc822proto.c \
-	src/network/rfc822proto-constants.h
+	src/network/rfc822proto-constants.h \
+	src/cfgparser/cfgparser.h \
+	src/cfgparser/cfgparser.lex.l \
+	src/cfgparser/cfgparser.lex.c \
+	src/cfgparser/cfgparser.parse.y \
+	src/cfgparser/cfgparser.parse.c
 
 $(top_srcdir)/.version:
 	echo $(VERSION) > $@-t && mv $@-t $@
@@ -56,17 +61,11 @@ dist_feng_SOURCES = $(RAGEL_SOURCES) \
 	src/feng.h \
 	src/main.c \
 	src/utilities.c \
-	src/conf/array.c \
-	src/conf/array.h \
-	src/conf/configparser.c \
-	src/conf/configparser.h \
-	src/conf/configfile.c \
-	src/conf/configfile.h \
-	src/conf/data_array.c \
-	src/conf/data_integer.c \
-	src/conf/data_config.c \
-	src/conf/data_string.c \
-	src/conf/settings.h \
+	\
+	src/cfgparser/cfgparser.cb.c \
+	src/cfgparser/cfgparser.h \
+	src/cfgparser/cfgparser.lex.l \
+	src/cfgparser/cfgparser.parse.y \
 	\
 	src/network/netembryo.h \
 	src/network/neb_sockaddr.c \
@@ -128,6 +127,18 @@ if ENABLE_SCTP
 dist_feng_SOURCES += src/network/rtsp_sctp.c
 endif
 
+src/cfgparser/cfgparser.h: src/cfgparser/cfgparser.h.xsl src/cfgparser/cfgparser.xml
+	@$(mkdir_p) $(dir $@)
+	$(AM_V_GEN)$(XSLTPROC) -o $@ $^
+
+src/cfgparser/cfgparser.lex.l: src/cfgparser/cfgparser.l.xsl src/cfgparser/cfgparser.xml
+	@$(mkdir_p) $(dir $@)
+	$(AM_V_GEN)$(XSLTPROC) -o $@ $^
+
+src/cfgparser/cfgparser.parse.y: src/cfgparser/cfgparser.y.xsl src/cfgparser/cfgparser.xml
+	@$(mkdir_p) $(dir $@)
+	$(AM_V_GEN)$(XSLTPROC) -o $@ $^
+
 src/network/rfc822proto.c: src/network/rfc822proto-source.xsl src/network/rfc822proto.xml
 	$(AM_V_GEN)$(XSLTPROC) -o $@ $^
 
@@ -149,9 +160,10 @@ tests/rfc822proto/rfc822proto-test.rl: tests/rfc822proto/rfc822proto-test.xsl sr
 
 tests/rfc822proto/rfc822proto-test.c: src/network/rfc822proto-statemachine.rl
 
-INCLUDES = -I. -I$(srcdir)/src -Isrc -I$(srcdir)/src/network -Isrc/network
+INCLUDES = -I. -I$(srcdir)/src -Isrc -I$(srcdir)/src/network -Isrc/network -Isrc/cfgparser
 
 AM_RAGELFLAGS = -I$(srcdir)/src/network -Isrc/network
+AM_YFLAGS = --defines
 
 if HAVE_RAGEL
 include $(top_srcdir)/ragel.make
