--- a/etc/feng-uninstalled.conf.in
+++ b/etc/feng-uninstalled.conf.in
@@ -1,25 +1,18 @@
-## lighttpd like configuration
-var.basedir  = "@abs_top_builddir@"
-var.logdir   = "@abs_top_builddir@"
-var.statedir = "@abs_top_builddir@"
+options {
+    username "feng";
+    groupname "feng";
+    error-log "stderr";
+    log-level 5;
+};
 
-# bind to port (defaults to @feng_rtsp_port@)
-server.port         = 8554
+socket {
+    port "8554";
+    sctp-streams 16;
+@ENABLE_SCTP@    sctp on;
+@ENABLE_IPV6@    ipv6 on;
+};
 
-# bind to name (defaults to all interfaces)
-# server.bind         = "live.host.tld"
-
-@ENABLE_SCTP@   sctp.protocol       = "enable"
-@ENABLE_SCTP@   sctp.max_streams    = 16
-
-@ENABLE_IPV6@server.use-ipv6 = "enable"
-
-server.username      = "feng"
-server.groupname     = "feng"
-server.max-connections = @feng_max_session@
-server.loglevel      = 5
-server.document-root = "@abs_top_srcdir@/avroot"
-server.errorlog      = var.logdir  + "/error.log"
-server.errorlog-use-syslog = "disable"
-accesslog.filename   = var.logdir + "/access.log"
-accesslog.use-syslog = "disable"
+vhost {
+    document-root "@abs_top_srcdir@/avroot";
+    access-log "@abs_top_builddir@/access.log";
+};
