parsers: factor out common functions between theora and vorbis
The two parsers shared the same private structure, the same parse and
uninit methods, so they are now merged into a single xiph translation
unit.

This reduces duplication and reduces the amount of code.

--- a/Makefile.am
+++ b/Makefile.am
@@ -124,6 +124,7 @@ if FENG_FFMPEG
 dist_feng_SOURCES += src/media/parser/h264.c \
 		     src/media/parser/vorbis.c \
 		     src/media/parser/theora.c \
+		     src/media/parser/xiph.c src/media/parser/xiph.h \
 		     src/media/parser/aac.c \
 		     src/media/parser/mp4ves.c \
 		     src/media/parser/speex.c \
